--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full w-full m-0 p-0">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <title>HRMS SYSTEM</title>
 </head>
 
-<body>
+<body class="h-full w-full m-0 p-0 bg-no-repeat bg-fixed bg-gradient-to-r from-cyan-500 to-blue-500">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
