--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <title>HRMS SYSTEM</title>
 </head>
 
-<body class="h-full w-full m-0 p-0 bg-no-repeat bg-fixed bg-gradient-to-r from-cyan-500 to-blue-500">
+<body class="h-full w-full m-0 p-0 bg-no-repeat bg-fixed bg-gradient-to-r from-cyan-500 to-blue-500 overflow-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
