--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="./src/assets/react.svg" />
+  <meta name="description="
+    content="Human Resource Management System - Final Project requirements in compliance with IM24 Subject" />
   <meta name="viewport"
     content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <title>HRMS SYSTEM</title>
