--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="./src/assets/react.svg" />
-  <meta name="description="
+  <meta name="description"
     content="Human Resource Management System - Final Project requirements in compliance with IM24 Subject" />
   <meta name="viewport"
-    content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, width=device-width, height=device-height" />
   <title>HRMS SYSTEM</title>
 </head>
 
