feat: modal portal

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 
 <body class="h-full w-full m-0 p-0 bg-no-repeat bg-fixed bg-gradient-to-r from-cyan-500 to-blue-500 overflow-hidden">
   <div id="root"></div>
+  <div id="modal-root"></div>"
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
