--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,12 @@
     content="Human Resource Management System - Final Project requirements in compliance with IM24 Subject" />
   <meta name="viewport"
     content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, width=device-width, height=device-height" />
-  <title>HRMS SYSTEM</title>
+  <title>HRMS</title>
 </head>
 
 <body class="h-full w-full m-0 p-0 bg-no-repeat bg-fixed bg-gradient-to-r from-cyan-500 to-blue-500 overflow-hidden">
+  <div id="modal-root"></div>
   <div id="root"></div>
-  <div id="modal-root"></div>"
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
